fix: line breaks in posts

--- a/src/style/global.css
+++ b/src/style/global.css
@@ -96,6 +96,10 @@
     z-index: 9999;
   }
 
+  .post-container {
+    whitespace: pre-wrap;
+  }
+
   #message {
     white-space: pre-wrap;
   }
